@@ -1,5 +1,9 @@
 2019-10-18  Richard Earnshaw  <rearnsha@arm.com>
 
+	* gcc.target/arm/negdi-3.c: Remove XFAIL markers.
+
+2019-10-18  Richard Earnshaw  <rearnsha@arm.com>
+
 	* gcc.target/arm/pr53447-1.c: Remove XFAIL.
 	* gcc.target/arm/pr53447-3.c: Remove XFAIL.
 	* gcc.target/arm/pr53447-4.c: Remove XFAIL.
